--- a/src/css/main.css
+++ b/src/css/main.css
@@ -115,7 +115,7 @@ body {
   z-index: 100;
   transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
-.nav--active {
+.nav--disable {
   transform: translateX(0);
 }
 .nav__item {
