--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,10 +49,6 @@ html {
 }
 
 body {
-  background-image: url("../img/daniel-j-schwarz-YtY724tdl7Y-unsplash-croped.jpg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
   font-family: "Open Sans", sans-serif;
   font-size: 1.6rem;
 }
@@ -86,7 +82,7 @@ body {
   right: 0;
   height: 3px;
   content: "";
-  background-color: #BA6F84;
+  background-color: #ba6f84;
   transition: width 0.3s;
 }
 .burger-btn__bars {
@@ -111,7 +107,7 @@ body {
   height: 100%;
   width: 100%;
   transform: translateX(100%);
-  background-image: linear-gradient(45deg, rgba(255, 212, 224, 0.75), rgba(252, 191, 255, 0.75));
+  background-image: linear-gradient(45deg, rgb(255, 212, 224), rgb(252, 191, 255));
   z-index: 100;
   transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
@@ -127,7 +123,7 @@ body {
   margin: 0.5em 0;
   padding: 0.5em 2em;
   font-size: 2.8rem;
-  color: #BA6F84;
+  color: #ba6f84;
   text-decoration: none;
 }
 .nav__item::before {
@@ -137,7 +133,7 @@ body {
   width: 100%;
   height: 100%;
   transform: scale(0);
-  border: 3px solid #BA6F84;
+  border: 3px solid #ba6f84;
   border-radius: 8px;
   content: "";
   transition: transform 0.3s;
@@ -147,6 +143,10 @@ body {
 }
 
 .header {
+  background-image: url("../img/daniel-j-schwarz-YtY724tdl7Y-unsplash-croped.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   position: relative;
   display: flex;
   justify-content: center;
@@ -185,7 +185,7 @@ body {
 .header__timer .time__section--title {
   text-align: center;
   margin-bottom: 20px;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 .header__timer .time__section__cards {
   display: flex;
@@ -200,11 +200,16 @@ body {
 .header__timer .time__section__cards .card .number {
   margin-bottom: 10px;
   font-weight: bold;
-  font-size: 3.5rem;
+  font-size: 2.5rem;
 }
 .header__timer .time__section__cards .card__title {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
+}
+
+.section {
+  background-color: #eee;
+  min-height: 100vh;
 }
 
 @-webkit-keyframes navItemsAnimation {
@@ -321,13 +326,13 @@ li {
     height: 250px;
   }
   .header__timer .time__section--title {
-    font-size: 5rem;
+    font-size: 3.5rem;
   }
   .header__timer .time__section__cards .card .number {
-    font-size: 5rem;
+    font-size: 3.5rem;
   }
   .header__timer .time__section__cards .card__title {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
   }
   .counter__app .time__section--title {
     font-size: 2.5rem;
