--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,8 +1,9 @@
 $main-color: #ffd4e0;
 $secondary-color: #e7c6ff;
-$pure-white: #ba6f84;
+$pure-white: #99535b;
 $light-white: #eee;
 $dark: #2e2e2e;
 $section-color: #eee;
 
-$light-blue-gradient: linear-gradient(45deg, rgba(255, 212, 224, 1), rgba(252, 191, 255, 1));
+// $light-blue-gradient: linear-gradient(45deg, rgba(255, 212, 224, 1), rgba(252, 191, 255, 1));
+$light-blue-gradient: linear-gradient(45deg, #dbbdc0, #dbbdc0);
