--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -11,5 +11,6 @@
 	background-image: url($bgImg);
 	background-size: cover;
 	background-position: center;
+	background-position-x: 70%;
 	background-attachment: fixed;
 }
