--- a/css/main.css
+++ b/css/main.css
@@ -37,8 +37,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -84,7 +83,6 @@ body {
   height: 3px;
   content: "";
   background-color: #99535b;
-  -webkit-transition: width 0.3s;
   transition: width 0.3s;
 }
 .burger-btn__bars {
@@ -97,47 +95,31 @@ body {
 .burger-btn__bars::before {
   top: 27px;
   width: 30%;
-  -webkit-transition-delay: 0.1s;
-          transition-delay: 0.1s;
+  transition-delay: 0.1s;
 }
 
 .nav {
   position: fixed;
   top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 100%;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  transform: translateX(100%);
   background-image: linear-gradient(45deg, #dbbdc0, #dbbdc0);
   z-index: 100;
-  -webkit-transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
   transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 .nav--disable {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  transform: translateX(0);
 }
 .nav__item {
   position: relative;
   display: block;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin: 0.5em 0;
   padding: 0.5em 2em;
   font-size: 2.8rem;
@@ -150,19 +132,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  transform: scale(0);
   border: 3px solid #99535b;
   border-radius: 8px;
   content: "";
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 .nav__item:hover::before {
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  transform: scale(0);
 }
 
 .header {
@@ -172,19 +149,10 @@ body {
   background-position-x: 70%;
   background-attachment: fixed;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   padding: 2em;
   height: 100vh;
   text-align: center;
@@ -207,25 +175,15 @@ body {
 }
 .header__timer__body {
   font-family: "Petit Formal Script", cursive;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   width: 100vw;
   height: 200px;
   overflow: hidden;
 }
 .header__timer .time__section {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   z-index: 100;
 }
 .header__timer .time__section--title {
@@ -235,22 +193,13 @@ body {
   font-size: 2.5rem;
 }
 .header__timer .time__section__cards {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  justify-content: space-evenly;
   width: 100%;
 }
 .header__timer .time__section__cards .card {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: center;
 }
 .header__timer .time__section__cards .card .number {
@@ -268,23 +217,19 @@ body {
 
 @-webkit-keyframes navItemsAnimation {
   from {
-    -webkit-transform: translateX(200%);
-            transform: translateX(200%);
+    transform: translateX(200%);
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
 @keyframes navItemsAnimation {
   from {
-    -webkit-transform: translateX(200%);
-            transform: translateX(200%);
+    transform: translateX(200%);
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 .nav-items-animation {
@@ -294,6 +239,10 @@ body {
 
 .contact--disable {
   display: none;
+}
+.contact__box--icons {
+  height: 40px;
+  display: inline;
 }
 
 .info--disable {
@@ -309,46 +258,22 @@ body {
 .plan--disable {
   display: none;
 }
-.plan__box--icons {
-  height: 100px;
-  display: block;
-  margin: 20px auto;
-  padding: 20px 0 0 0;
-}
 
 .menu--disable {
   display: none;
 }
-.menu__box--icons {
-  height: 100px;
-  display: block;
-  margin: 20px auto;
-  padding: 20px 0 0 0;
-}
 
 .photos--disable {
   display: none;
-}
-.photos__box--icons {
-  height: 100px;
-  display: block;
-  margin: 20px auto;
-  padding: 20px 0 0 0;
 }
 
 .map--disable {
   display: none;
 }
 .map__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 .map__box iframe {
   border: 0;
@@ -357,26 +282,16 @@ body {
 }
 
 .tittle {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   margin: 1em 0 0.5em 0;
 }
 
 .text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   text-align: center;
 }
 
@@ -450,27 +365,21 @@ li {
     display: none;
   }
   .nav {
+    height: 0;
     background-image: none;
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
+    transform: translateX(0%);
   }
   .nav__item {
     display: inline-block;
     font-size: 1.8rem;
   }
   .nav__item:hover::before {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
   .nav-desktop {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
+    justify-content: flex-end;
+    align-items: flex-start;
+    transform: translateX(0%);
   }
   .nav-desktop a {
     display: inline-block;
@@ -486,19 +395,10 @@ li {
   }
   .header {
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     padding: 2em;
     height: 100vh;
     text-align: center;
