--- a/scss/main.scss
+++ b/scss/main.scss
@@ -223,6 +223,11 @@ body {
 		&--icons {
 			height: 40px;
 			display: inline;
+
+			&:hover {
+				transform: scale(1.3);
+				transition: 0.2s;
+			}
 		}
 	}
 }
