--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
   position: relative;
   font-family: "Petit Formal Script", cursive;
   margin-bottom: 2em;
+  color: #99535b;
   font-size: 3rem;
   font-weight: 300;
   text-align: center;
