--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,7 @@ body {
 	}
 
 	&:hover {
+
 		.burger-btn__bars::after,
 		.burger-btn__bars::before {
 			width: 100%;
@@ -63,6 +64,7 @@ body {
 
 	&__bars {
 		width: 100%;
+
 		&::after {
 			top: 13px;
 			width: 60%;
@@ -128,9 +130,11 @@ body {
 
 .header {
 	@include heroImages('../img/oip-alinalukaszewskafotografia-25.JPG');
+
 	&--disable {
 		display: none;
 	}
+
 	position: relative;
 	display: flex;
 	justify-content: center;
@@ -153,6 +157,7 @@ body {
 
 	&__timer {
 		margin-top: 300px;
+
 		&__body {
 			font-family: 'Petit Formal Script', cursive;
 			display: flex;
@@ -178,14 +183,17 @@ body {
 				display: flex;
 				justify-content: space-evenly;
 				width: 100%;
+
 				.card {
 					display: flex;
 					flex-direction: column;
 					text-align: center;
+
 					.number {
 						margin-bottom: 10px;
 						font-size: 2.5rem;
 					}
+
 					&__title {
 						font-size: 2.5rem;
 					}
@@ -214,6 +222,8 @@ body {
 	animation: navItemsAnimation 1s both;
 }
 
+////// KONTAKT ////////
+
 .contact {
 	&--disable {
 		display: none;
@@ -229,13 +239,31 @@ body {
 				transition: 0.2s;
 			}
 		}
+
+		&--tittle {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			margin: 1em 0 0.5em 0;
+		}
+
+		&--text {
+			display: flex;
+			justify-content: center;
+			text-align: center;
+			align-items: flex-start;
+		}
 	}
 }
+
+////// INFO ////////
 
 .info {
 	&--disable {
 		display: none;
 	}
+
 	&__box {
 		&--icons {
 			height: 100px;
@@ -243,51 +271,94 @@ body {
 			margin: 20px auto;
 			padding: 20px 0 0 0;
 		}
+
+		&--tittle {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			margin: 1em 0 0.5em 0;
+		}
+
+		&--text {
+			display: flex;
+			justify-content: center;
+			text-align: center;
+			align-items: flex-start;
+		}
+
 	}
 }
+
+////// PLAN ////////
+
 .plan {
-	&--disable {
-		display: none;
+	&__box {
+		&--text {
+			display: flex;
+			justify-content: center;
+			text-align: center;
+			align-items: flex-start;
+		}
 	}
-}
-.menu {
-	&--disable {
-		display: none;
-	}
-}
-.photos {
+
 	&--disable {
 		display: none;
 	}
 }
 
+////// MENU ////////
+
+.menu {
+	&__box {
+		&--text {
+			display: flex;
+			justify-content: center;
+			text-align: center;
+			align-items: flex-start;
+		}
+	}
+
+	&--disable {
+		display: none;
+	}
+}
+
+////// ZDJĘCIA ////////
+
+.photos {
+	&__box {
+		&--text {
+			display: flex;
+			justify-content: center;
+			text-align: center;
+			align-items: flex-start;
+		}
+	}
+
+	&--disable {
+		display: none;
+	}
+}
+
+////// MAPA /////////
+
 .map {
 	&--disable {
 		display: none;
 	}
+
 	&__box {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+
 		iframe {
 			border: 0;
 			width: 100%;
 			height: 450px;
 		}
 	}
-}
-
-.tittle {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	margin: 1em 0 0.5em 0;
-}
-.text {
-	display: flex;
-	justify-content: center;
-	text-align: center;
 }
 
 li {
@@ -309,9 +380,11 @@ li {
 		&__heading {
 			font-size: 4rem;
 		}
+
 		img {
 			height: 300px;
 		}
+
 		&__timer {
 			&__body {
 				width: 100vw;
@@ -328,6 +401,7 @@ li {
 						.number {
 							font-size: 3.5rem;
 						}
+
 						&__title {
 							font-size: 3.5rem;
 						}
@@ -361,9 +435,11 @@ li {
 		&__heading {
 			font-size: 6rem;
 		}
+
 		&__img {
 			height: 420px;
 		}
+
 		&__timer {
 			&__body {
 				width: 70vw;
@@ -380,6 +456,7 @@ li {
 						.number {
 							font-size: 4.5rem;
 						}
+
 						&__title {
 							font-size: 4.5rem;
 						}
@@ -416,13 +493,16 @@ li {
 	.burger-btn {
 		display: none;
 	}
+
 	.nav-mobile {
 		display: none;
 	}
+
 	.nav {
 		height: 0;
 		background-image: none;
 		transform: translateX(0%);
+
 		&__item {
 			display: inline-block;
 			font-size: 1.6rem;
@@ -432,6 +512,7 @@ li {
 			}
 		}
 	}
+
 	.nav-desktop {
 		justify-content: flex-end;
 		align-items: flex-start;
@@ -461,6 +542,7 @@ li {
 		&--disable {
 			display: none;
 		}
+
 		position: relative;
 		display: flex;
 		justify-content: center;
@@ -495,6 +577,7 @@ li {
 						.number {
 							font-size: 4.5rem;
 						}
+
 						&__title {
 							font-size: 4.5rem;
 						}
