--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,13 @@ body {
   width: 100%;
   height: 450px;
 }
+.map__box--link {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: flex-start;
+  margin-top: 50px;
+}
 
 li {
   list-style: none;
