--- a/css/main.css
+++ b/css/main.css
@@ -233,6 +233,98 @@ body {
     transform: translateX(0);
   }
 }
+@-webkit-keyframes phoneAnimation {
+  0% {
+    scale: 1;
+    transform: rotate(0deg);
+  }
+  10% {
+    scale: 1, 1;
+    transform: rotate(10deg);
+  }
+  20% {
+    scale: 1.2;
+    transform: rotate(30deg);
+  }
+  30% {
+    scale: 1.3;
+    transform: rotate(10deg);
+  }
+  40% {
+    scale: 1, 4;
+    transform: rotate(-10deg);
+  }
+  50% {
+    scale: 1.5;
+    transform: rotate(10deg);
+  }
+  60% {
+    scale: 1.4;
+    transform: rotate(0deg);
+  }
+  70% {
+    scale: 1.3;
+    transform: rotate(-10deg);
+  }
+  80% {
+    scale: 1.2;
+    transform: rotate(-20deg);
+  }
+  90% {
+    scale: 1.1;
+    transform: rotate(-10deg);
+  }
+  100% {
+    scale: 1;
+    transform: rotate(0deg);
+  }
+}
+@keyframes phoneAnimation {
+  0% {
+    scale: 1;
+    transform: rotate(0deg);
+  }
+  10% {
+    scale: 1, 1;
+    transform: rotate(10deg);
+  }
+  20% {
+    scale: 1.2;
+    transform: rotate(30deg);
+  }
+  30% {
+    scale: 1.3;
+    transform: rotate(10deg);
+  }
+  40% {
+    scale: 1, 4;
+    transform: rotate(-10deg);
+  }
+  50% {
+    scale: 1.5;
+    transform: rotate(10deg);
+  }
+  60% {
+    scale: 1.4;
+    transform: rotate(0deg);
+  }
+  70% {
+    scale: 1.3;
+    transform: rotate(-10deg);
+  }
+  80% {
+    scale: 1.2;
+    transform: rotate(-20deg);
+  }
+  90% {
+    scale: 1.1;
+    transform: rotate(-10deg);
+  }
+  100% {
+    scale: 1;
+    transform: rotate(0deg);
+  }
+}
 .nav-items-animation {
   -webkit-animation: navItemsAnimation 1s both;
           animation: navItemsAnimation 1s both;
@@ -273,17 +365,18 @@ body {
   padding: 20px 0 0 0;
 }
 .info__box--tittle {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: justify;
   text-align: center;
   margin: 1em 0 0.5em 0;
 }
 .info__box--text {
-  display: flex;
-  justify-content: center;
+  text-align: justify;
   text-align: center;
-  align-items: flex-start;
+}
+.info__box--animation {
+  color: black;
+  -webkit-animation: phoneAnimation 1s linear infinite both;
+          animation: phoneAnimation 1s linear infinite both;
 }
 
 .plan__box--text {
