--- a/scss/main.scss
+++ b/scss/main.scss
@@ -218,6 +218,53 @@ body {
 	}
 }
 
+@keyframes phoneAnimation {
+	0% {
+		scale: 1;
+		transform: rotate(0deg);
+	}
+	10% {
+		scale: 1,1;
+		transform: rotate(10deg);
+	}
+	20% {
+		scale: 1.2;
+		transform: rotate(30deg);
+	}
+	30% {
+		scale: 1.3;
+		transform: rotate(10deg);
+	}
+	40% {
+		scale: 1,4;
+		transform: rotate(-10deg);
+	}
+	50% {
+		scale: 1.5;
+		transform: rotate(10deg);
+	}
+	60% {
+		scale: 1.4;
+		transform: rotate(0deg);
+	}
+	70% {
+		scale: 1.3;
+		transform: rotate(-10deg);
+	}
+	80% {
+		scale: 1.2;
+		transform: rotate(-20deg);
+	}
+	90% {
+		scale: 1.1;
+		transform: rotate(-10deg);
+	}
+	100% {
+		scale: 1;
+		transform: rotate(0deg);
+	}
+}
+
 .nav-items-animation {
 	animation: navItemsAnimation 1s both;
 }
@@ -273,18 +320,26 @@ body {
 		}
 
 		&--tittle {
-			display: flex;
-			align-items: center;
-			justify-content: center;
+			// display: flex;
+			// align-items: center;
+			// justify-content: center;
+			// text-align: center;
+			text-align: justify;
 			text-align: center;
 			margin: 1em 0 0.5em 0;
 		}
 
 		&--text {
-			display: flex;
-			justify-content: center;
-			text-align: center;
-			align-items: flex-start;
+			// display: flex;
+			// justify-content: center;
+			// text-align: center;
+			// align-items: flex-start;
+			text-align: justify;
+  			text-align: center;
+		}
+		&--animation {
+			color: black;
+			animation: phoneAnimation 1s linear infinite both;
 		}
 
 	}
