change phone icon color

--- a/css/main.css
+++ b/css/main.css
@@ -377,8 +377,8 @@ body {
   text-align: justify;
   text-align: center;
   margin: 20px 0 0 30px;
+  color: green;
   font-size: 4rem;
-  color: black;
   -webkit-animation: phoneAnimation 1s linear infinite both;
           animation: phoneAnimation 1s linear infinite both;
 }
