--- a/scss/main.scss
+++ b/scss/main.scss
@@ -341,8 +341,8 @@ body {
 			text-align: justify;
 			text-align: center;
 			margin:  20px 0 0 30px;
+			color: green;
 			font-size: 4rem;
-			color: black;
 			animation: phoneAnimation 1s linear infinite both;
 		}
 
