--- a/css/main.css
+++ b/css/main.css
@@ -451,6 +451,8 @@ li {
   border-radius: 8px;
   content: "";
   transition: transform 0.3s;
+  background-color: grey;
+  opacity: 0.2;
 }
 .active-section:hover::before {
   transform: scale(0);
