--- a/scss/main.scss
+++ b/scss/main.scss
@@ -177,6 +177,11 @@ body {
 				font-weight: normal;
 				font-size: 2.5rem;
 			}
+			&--number {
+				font-family: 'Dancing Script', cursive;
+				font-size: 5rem;
+				display: none;
+			}
 
 			&__cards {
 				display: flex;
