--- a/scss/main.scss
+++ b/scss/main.scss
@@ -128,7 +128,7 @@ body {
 // HEADER
 
 .header {
-	@include heroImages('../img/oip-alinalukaszewskafotografia-25-tinypng.JPG');
+	@include heroImages('../img/oip-alinalukaszewskafotografia-25-tinypng.png');
 
 	&--disable {
 		display: none;
