--- a/css/main.css
+++ b/css/main.css
@@ -221,67 +221,12 @@ body {
   min-height: 100vh;
 }
 
-@-webkit-keyframes navItemsAnimation {
-  from {
-    transform: translateX(200%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
 @keyframes navItemsAnimation {
   from {
     transform: translateX(200%);
   }
   to {
     transform: translateX(0);
-  }
-}
-@-webkit-keyframes phoneAnimation {
-  0% {
-    scale: 1;
-    transform: rotate(0deg);
-  }
-  10% {
-    scale: 1, 1;
-    transform: rotate(10deg);
-  }
-  20% {
-    scale: 1.2;
-    transform: rotate(30deg);
-  }
-  30% {
-    scale: 1.3;
-    transform: rotate(10deg);
-  }
-  40% {
-    scale: 1, 4;
-    transform: rotate(-10deg);
-  }
-  50% {
-    scale: 1.5;
-    transform: rotate(10deg);
-  }
-  60% {
-    scale: 1.4;
-    transform: rotate(0deg);
-  }
-  70% {
-    scale: 1.3;
-    transform: rotate(-10deg);
-  }
-  80% {
-    scale: 1.2;
-    transform: rotate(-20deg);
-  }
-  90% {
-    scale: 1.1;
-    transform: rotate(-10deg);
-  }
-  100% {
-    scale: 1;
-    transform: rotate(0deg);
   }
 }
 @keyframes phoneAnimation {
@@ -331,15 +276,14 @@ body {
   }
 }
 .nav-items-animation {
-  -webkit-animation: navItemsAnimation 1s both;
-          animation: navItemsAnimation 1s both;
+  animation: navItemsAnimation 1s both;
 }
 
 .contact--disable {
   display: none;
 }
 .contact__box--icons {
-  height: 40px;
+  height: 35px;
   display: inline;
 }
 .contact__box--icons:hover {
@@ -348,6 +292,7 @@ body {
 }
 .contact__box--tittle {
   display: flex;
+  font-size: large;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -384,8 +329,7 @@ body {
   margin: 20px 0 0 30px;
   color: green;
   font-size: 4rem;
-  -webkit-animation: phoneAnimation 1s linear infinite both;
-          animation: phoneAnimation 1s linear infinite both;
+  animation: phoneAnimation 1s linear infinite both;
 }
 
 .plan__box--text {
