--- a/scss/main.scss
+++ b/scss/main.scss
@@ -282,17 +282,18 @@ body {
 
 	&__box {
 		&--icons {
-			height: 40px;
+			height: 35px;
 			display: inline;
 
 			&:hover {
 				transform: scale(1.3);
 				transition: 0.2s;
 			}
-		}
+		} 	
 
 		&--tittle {
 			display: flex;
+			font-size: large;
 			align-items: center;
 			justify-content: center;
 			text-align: center;
