--- a/css/main.css
+++ b/css/main.css
@@ -358,6 +358,24 @@ body {
   text-align: center;
   align-items: flex-start;
 }
+.photos__box__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 50px;
+  padding: 10px 20px;
+  background-color: #cf46cb;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.photos__box__button:hover {
+  background-color: rgba(207, 70, 203, 0.7);
+  transition: 0.3s;
+}
 .photos--disable {
   display: none;
 }
@@ -375,12 +393,24 @@ body {
   width: 100%;
   height: 450px;
 }
-.map__box--link {
+.map__button {
   display: flex;
   justify-content: center;
-  text-align: center;
-  align-items: flex-start;
+  align-items: center;
+  margin: auto;
   margin-top: 50px;
+}
+.map__button--link {
+  padding: 10px 20px;
+  background-color: #cf46cb;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 16px;
+}
+.map__button--link:hover {
+  background-color: rgba(207, 70, 203, 0.7);
+  transition: 0.3s;
 }
 
 li {
@@ -465,6 +495,9 @@ li {
   }
   .map__box iframe {
     width: 600px;
+  }
+  .map__box__button:hover {
+    background-color: #fff;
   }
 }
 @media (min-width: 992px) {
