--- a/css/main.css
+++ b/css/main.css
@@ -358,26 +358,26 @@ body {
   text-align: center;
   align-items: flex-start;
 }
-.photos__box__button {
+.photos__button {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: auto;
   margin-top: 50px;
   padding: 10px 20px;
-  background-color: #cf46cb;
-  color: white;
-  text-decoration: none;
+  background-color: #e68ae3;
   border-radius: 4px;
   font-size: 16px;
   cursor: pointer;
 }
-.photos__box__button--link {
-  color: white;
+.photos__button--link {
+  font-weight: bold;
+  color: #602b31;
+  text-transform: uppercase;
   text-decoration: none;
 }
-.photos__box__button:hover {
-  background-color: rgba(207, 70, 203, 0.7);
+.photos__button:hover {
+  background-color: rgba(230, 138, 227, 0.7);
   transition: 0.3s;
 }
 .photos--disable {
@@ -396,25 +396,6 @@ body {
   border: 0;
   width: 100%;
   height: 450px;
-}
-.map__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  margin-top: 50px;
-}
-.map__button--link {
-  padding: 10px 20px;
-  background-color: #cf46cb;
-  color: white;
-  text-decoration: none;
-  border-radius: 4px;
-  font-size: 16px;
-}
-.map__button--link:hover {
-  background-color: rgba(207, 70, 203, 0.7);
-  transition: 0.3s;
 }
 
 li {
@@ -439,6 +420,29 @@ li {
 }
 .active-section:hover::before {
   transform: scale(0);
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 50px;
+  padding: 10px 20px;
+  background-color: #e68ae3;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.button--link {
+  font-weight: bold;
+  color: #602b31;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.button:hover {
+  background-color: rgba(230, 138, 227, 0.7);
+  transition: 0.3s;
 }
 
 @media (min-width: 576px) {
