--- a/scss/main.scss
+++ b/scss/main.scss
@@ -388,27 +388,27 @@ body {
 			text-align: center;
 			align-items: flex-start;
 		}
-		&__button {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			margin: auto;
-			margin-top: 50px;
-			padding: 10px 20px;
-			background-color: #cf46cb;
-			color: white;
+	}
+	&__button {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: auto;
+		margin-top: 50px;
+		padding: 10px 20px;
+		background-color: #e68ae3;
+		border-radius: 4px;
+		font-size: 16px;
+		cursor: pointer;
+		&--link {
+			font-weight: bold;
+			color: #602b31;
+			text-transform: uppercase;
 			text-decoration: none;
-			border-radius: 4px;
-			font-size: 16px;
-			cursor: pointer;
-			&--link {
-				color: white;
-				text-decoration: none;
-			}
-			&:hover {
-				background-color: rgba(207, 70, 203, 0.7);
-				transition: 0.3s;
-			}
+		}
+		&:hover {
+			background-color: rgba(230, 138, 227, 0.7);
+			transition: 0.3s;
 		}
 	}
 
@@ -435,25 +435,6 @@ body {
 			height: 450px;
 		}
 	}
-	&__button {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		margin: auto;
-		margin-top: 50px;
-		&--link {
-			padding: 10px 20px;
-			background-color: #cf46cb;
-			color: white;
-			text-decoration: none;
-			border-radius: 4px;
-			font-size: 16px;
-			&:hover {
-				background-color: rgba(207, 70, 203, 0.7);
-				transition: 0.3s;
-			}
-		}
-	}
 }
 
 li {
@@ -478,6 +459,29 @@ li {
 
 	&:hover::before {
 		transform: scale(0);
+	}
+}
+
+.button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: auto;
+	margin-top: 50px;
+	padding: 10px 20px;
+	background-color: #e68ae3;
+	border-radius: 4px;
+	font-size: 16px;
+	cursor: pointer;
+	&--link {
+		font-weight: bold;
+			color: #602b31;
+			text-transform: uppercase;
+			text-decoration: none;
+	}
+	&:hover {
+		background-color: rgba(230, 138, 227, 0.7);
+		transition: 0.3s;
 	}
 }
 
