configure hover style for buttons

--- a/css/main.css
+++ b/css/main.css
@@ -429,20 +429,25 @@ li {
   margin: auto;
   margin-top: 50px;
   padding: 10px 20px;
-  background-color: #e68ae3;
+  background-color: #fff;
+  border: 2px solid #94555c;
   border-radius: 4px;
   font-size: 16px;
   cursor: pointer;
 }
 .button--link {
   font-weight: bold;
-  color: #602b31;
+  color: #94555c;
   text-transform: uppercase;
   text-decoration: none;
 }
 .button:hover {
-  background-color: rgba(230, 138, 227, 0.7);
-  transition: 0.3s;
+  background-color: #94555c;
+  transition: 0.5s;
+}
+.button:hover .button--link {
+  color: #fff;
+  transition: 0.5s;
 }
 
 @media (min-width: 576px) {
