--- a/scss/main.scss
+++ b/scss/main.scss
@@ -469,7 +469,7 @@ li {
 	margin: auto;
 	margin-top: 50px;
 	padding: 10px 20px;
-	background-color: #fff;
+	background-color: #eee;
 	border: 2px solid #94555c;
 	border-radius: 4px;
 	font-size: 16px;
@@ -484,7 +484,7 @@ li {
 		background-color: #94555c;
 		transition: 0.5s;
 		.button--link {
-			color: #fff;
+			color: #eee;
 			transition: 0.5s;
 		}
 	}
