--- a/css/main.css
+++ b/css/main.css
@@ -429,7 +429,7 @@ li {
   margin: auto;
   margin-top: 50px;
   padding: 10px 20px;
-  background-color: #fff;
+  background-color: #eee;
   border: 2px solid #94555c;
   border-radius: 4px;
   font-size: 16px;
@@ -446,7 +446,7 @@ li {
   transition: 0.5s;
 }
 .button:hover .button--link {
-  color: #fff;
+  color: #eee;
   transition: 0.5s;
 }
 
