--- a/css/main.css
+++ b/css/main.css
@@ -342,11 +342,29 @@ body {
   display: none;
 }
 
-.menu__box--text {
-  display: flex;
-  justify-content: center;
+.menu__box--icons {
+  height: 60px;
+  display: block;
+  margin: auto;
+}
+.menu__box--tittle {
+  text-align: justify;
   text-align: center;
-  align-items: flex-start;
+  margin: 2em 0 0.5em 0;
+}
+.menu__box--text {
+  line-height: 1.5em;
+  text-align: justify;
+  text-align: center;
+  padding: 1em 0 0.5 0;
+}
+.menu__box--animation {
+  text-align: justify;
+  text-align: center;
+  margin: 20px 0 0 30px;
+  color: green;
+  font-size: 4rem;
+  animation: phoneAnimation 1s linear infinite both;
 }
 .menu--disable {
   display: none;
