fixed scss for menu section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -324,17 +324,17 @@ body {
 		}
 
 		&--tittle {
-			text-align: justify;
+			justify-content: center;
 			text-align: center;
 			margin: 1em 0 0.5em 0;
 		}
 
 		&--text {
-			text-align: justify;
+			justify-content: center;
 			text-align: center;
 		}
 		&--animation {
-			text-align: justify;
+			justify-content: center;
 			text-align: center;
 			margin: 20px 0 0 30px;
 			color: green;
@@ -347,6 +347,10 @@ body {
 ////// PLAN ////////
 
 .plan {
+	&--disable {
+		display: none;
+	}
+
 	&__box {
 		&--text {
 			display: flex;
@@ -355,15 +359,15 @@ body {
 			align-items: flex-start;
 		}
 	}
-
-	&--disable {
-		display: none;
-	}
 }
 
 ////// MENU ////////
 
 .menu {
+	&--disable {
+		display: none;
+	}
+
 	&__box {
 		&--icons {
 			height: 60px;
@@ -372,35 +376,27 @@ body {
 		}
 
 		&--tittle {
-			text-align: justify;
+			justify-content: center;
 			text-align: center;
 			margin: 2em 0 0.5em 0;
 		}
 
 		&--text {
 			line-height: 1.5em;
-			text-align: justify;
+			justify-content: center;
 			text-align: center;
-			padding: 1em 0 0.5 0;
+			padding: 1em 0 0 0;
 		}
-		&--animation {
-			text-align: justify;
-			text-align: center;
-			margin: 20px 0 0 30px;
-			color: green;
-			font-size: 4rem;
-			animation: phoneAnimation 1s linear infinite both;
-		}
-	}
-
-	&--disable {
-		display: none;
 	}
 }
 
 ////// ZDJĘCIA ////////
 
 .photos {
+	&--disable {
+		display: none;
+	}
+
 	&__box {
 		&--text {
 			display: flex;
@@ -430,10 +426,6 @@ body {
 			background-color: rgba(230, 138, 227, 0.7);
 			transition: 0.3s;
 		}
-	}
-
-	&--disable {
-		display: none;
 	}
 }
 
