--- a/css/main.css
+++ b/css/main.css
@@ -215,19 +215,16 @@ body {
 .header__timer .time__section__cards .card__title {
   font-size: 2.5rem;
 }
+.header__date {
+  position: absolute;
+  top: 85%;
+  font-family: "Petit Formal Script", cursive;
+  font-size: 2rem;
+}
 
 .section {
   background-color: #eee;
   min-height: 100vh;
-}
-
-@-webkit-keyframes navItemsAnimation {
-  from {
-    transform: translateX(200%);
-  }
-  to {
-    transform: translateX(0);
-  }
 }
 
 @keyframes navItemsAnimation {
@@ -236,52 +233,6 @@ body {
   }
   to {
     transform: translateX(0);
-  }
-}
-@-webkit-keyframes phoneAnimation {
-  0% {
-    scale: 1;
-    transform: rotate(0deg);
-  }
-  10% {
-    scale: 1, 1;
-    transform: rotate(10deg);
-  }
-  20% {
-    scale: 1.2;
-    transform: rotate(30deg);
-  }
-  30% {
-    scale: 1.3;
-    transform: rotate(10deg);
-  }
-  40% {
-    scale: 1, 4;
-    transform: rotate(-10deg);
-  }
-  50% {
-    scale: 1.5;
-    transform: rotate(10deg);
-  }
-  60% {
-    scale: 1.4;
-    transform: rotate(0deg);
-  }
-  70% {
-    scale: 1.3;
-    transform: rotate(-10deg);
-  }
-  80% {
-    scale: 1.2;
-    transform: rotate(-20deg);
-  }
-  90% {
-    scale: 1.1;
-    transform: rotate(-10deg);
-  }
-  100% {
-    scale: 1;
-    transform: rotate(0deg);
   }
 }
 @keyframes phoneAnimation {
@@ -331,8 +282,7 @@ body {
   }
 }
 .nav-items-animation {
-  -webkit-animation: navItemsAnimation 1s both;
-          animation: navItemsAnimation 1s both;
+  animation: navItemsAnimation 1s both;
 }
 
 .contact--disable {
@@ -384,8 +334,7 @@ body {
   margin: 20px 0 0 30px;
   color: green;
   font-size: 4rem;
-  -webkit-animation: phoneAnimation 1s linear infinite both;
-          animation: phoneAnimation 1s linear infinite both;
+  animation: phoneAnimation 1s linear infinite both;
 }
 
 .plan__box--text {
@@ -516,6 +465,9 @@ li {
   .header__timer .time__section__cards .card__title {
     font-size: 4.5rem;
   }
+  .header__date {
+    font-size: 2.5rem;
+  }
   .counter__app .time__section__cards .card .number {
     font-size: 3rem;
   }
@@ -570,6 +522,9 @@ li {
   .header__timer .time__section__cards .card__title {
     font-size: 4.5rem;
   }
+  .header__date {
+    font-size: 3rem;
+  }
 }
 @media (min-width: 1200px) {
   .nav__item {
@@ -607,6 +562,9 @@ li {
   }
   .header__timer .time__section__cards .card__title {
     font-size: 4.5rem;
+  }
+  .header__date {
+    font-size: 3.5rem;
   }
 }
 @media (min-width: 1400px) {
