--- a/scss/main.scss
+++ b/scss/main.scss
@@ -339,7 +339,7 @@ body {
 			justify-content: center;
 			text-align: center;
 		}
-		&--animation {			
+		&--animation {
 			text-align: justify;
 			text-align: center;
 			margin: 20px 0 0 30px;
@@ -411,28 +411,6 @@ body {
 			align-items: flex-start;
 		}
 	}
-	&__button {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		margin: auto;
-		margin-top: 50px;
-		padding: 10px 20px;
-		background-color: #e68ae3;
-		border-radius: 4px;
-		font-size: 16px;
-		cursor: pointer;
-		&--link {
-			font-weight: bold;
-			color: #602b31;
-			text-transform: uppercase;
-			text-decoration: none;
-		}
-		&:hover {
-			background-color: rgba(230, 138, 227, 0.7);
-			transition: 0.3s;
-		}
-	}
 }
 
 ////// MAPA /////////
@@ -478,7 +456,34 @@ li {
 	&:hover::before {
 		transform: scale(0);
 	}
-	
+}
+
+.button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: auto;
+	margin-top: 50px;
+	padding: 10px 20px;
+	background-color: #eee;
+	border: 2px solid #94555c;
+	border-radius: 4px;
+	font-size: 16px;
+	cursor: pointer;
+	&--link {
+		font-weight: bold;
+		color: #94555c;
+		text-transform: uppercase;
+		text-decoration: none;
+	}
+	&:hover {
+		background-color: #94555c;
+		transition: 0.5s;
+		.button--link {
+			color: #eee;
+			transition: 0.5s;
+		}
+	}
 }
 
 ////// MEDIA /////
