add wedding plan

--- a/css/main.css
+++ b/css/main.css
@@ -346,7 +346,12 @@ body {
   justify-content: center;
   text-align: center;
   align-items: flex-start;
-  margin: 20px 0 0 30px;
+  margin: 0px 0 50px 0;
+}
+.plan__box--icons {
+  height: 80px;
+  display: block;
+  margin: 10px auto;
 }
 
 .menu--disable {
