--- a/scss/main.scss
+++ b/scss/main.scss
@@ -363,7 +363,13 @@ body {
 			justify-content: center;
 			text-align: center;
 			align-items: flex-start;
-			margin: 20px 0 0 30px
+			margin: 0px 0 50px 0
+		}
+		&--icons {
+			height: 80px;
+			display: block;
+			margin: 10px auto;
+
 		}
 	}
 }
