--- a/css/main.css
+++ b/css/main.css
@@ -394,8 +394,8 @@ body {
 }
 .map__box iframe {
   border: 0;
-  width: 100%;
-  height: 450px;
+  width: 300;
+  height: 220px;
 }
 
 li {
@@ -510,7 +510,8 @@ li {
     font-size: 3rem;
   }
   .map__box iframe {
-    width: 600px;
+    width: 450px;
+    height: 300px;
   }
 }
 @media (min-width: 992px) {
