--- a/scss/main.scss
+++ b/scss/main.scss
@@ -363,13 +363,12 @@ body {
 			justify-content: center;
 			text-align: center;
 			align-items: flex-start;
-			margin: 0px 0 50px 0
+			margin: 0px 0 50px 0;
 		}
 		&--icons {
 			height: 80px;
 			display: block;
 			margin: 10px auto;
-
 		}
 	}
 }
@@ -434,8 +433,8 @@ body {
 
 		iframe {
 			border: 0;
-			width: 100%;
-			height: 450px;
+			width: 300;
+			height: 220px;
 		}
 	}
 }
@@ -613,7 +612,8 @@ li {
 	.map {
 		&__box {
 			iframe {
-				width: 600px;
+				width: 450px;
+				height: 300px;
 			}
 		}
 	}
