--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
 $main-color: #ffd4e0;
 $secondary-color: #e7c6ff;
-$pure-white: #99535b;
+$pure-white: rgb(230,28,102);;
 $light-white: #eee;
 $dark: #2e2e2e;
 $section-color: #eee;
