--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -12,5 +12,6 @@
 	background-size: cover;
 	background-position: center;
 	background-position-x: 70%;
+	background-position-y: 0%;
 	background-attachment: fixed;
 }
